--- a/pkg/kamailio/deb/bionic/changelog
+++ b/pkg/kamailio/deb/bionic/changelog
@@ -1,3 +1,9 @@
+kamailio (5.3.3.5) unstable; urgency=medium
+
+  * version set 5.3.3.5
+
+ -- Federico Cabiddu <federico.cabiddu@gmail.com>  Mon, 04 May 2020 11:40:25 +0200
+
 kamailio (5.3.3.4) unstable; urgency=medium
 
   * version set 5.3.3.4
