--- a/pkg/kamailio/deb/bionic/changelog
+++ b/pkg/kamailio/deb/bionic/changelog
@@ -1,3 +1,9 @@
+kamailio (5.3.7.1) unstable; urgency=medium
+
+  * version set 5.3.7.1
+
+ -- Federico Cabiddu <federico.cabiddu@gmail.com>  Thursday, 19 Nov 2020 10:40:09 +0100
+
 kamailio (5.3.7) unstable; urgency=medium
 
   * version set 5.3.7
